# GLCP

./: pyproject.toml  readme.md  run_training.py
nnunetv2/inference/: predict_from_raw_data.py
nnunetv2/run/: run_training.py
nnunetv2/training/loss/: cbdice_loss.py  cldice_loss.py  cldice_v2.py  compound_cbdice_loss.py  compound_cldice_loss.py  compound_glcp_loss_2dunet.py  compound_glcp_loss_3dunet.py  compound_losses.py  dice.py  robust_ce_loss.py  soft_skeleton.py
nnunetv2/training/nnUNetTrainer/: nnUNetTrainer.py
nnunetv2/training/nnUNetTrainer/variants/network_architecture/: Unet2D_nnunet_fullres.py  Unet3D_nnunet_fullres.py  nnUNetTrainerNoDeepSupervision.py  nnUNetTrainerNoDeepSupervision_NoMirroring.py  nnUNetTrainer_2DUnet_NoDeepSupervision.py  nnUNetTrainer_2DUnet_NoDeepSupervision_CE_DC_crit_ske_refine.py  nnUNetTrainer_3DUnet_NoDeepSupervision.py  nnUNetTrainer_3DUnet_NoDeepSupervision_CE_DC.py  nnUNetTrainer_3DUnet_NoDeepSupervision_CE_DC_crit_ske_refine.py  nnUNetTrainer_CE_DC_CBDC_NoDeepSupervision.py  nnUNetTrainer_CE_DC_CLDC_NoDeepSupervision.py
