[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glcp-nnunet"
version = "0.0.0"
description = "GLCP fork additions for nnUNetv2"
requires-python = ">=3.10"

[project.scripts]
nnUNetv2_predict = "nnunetv2.inference.predict_from_raw_data:predict_entry_point"
nnUNetv2_plan_experiment = "nnunetv2.experiment_planning.plan_and_preprocess_entrypoints:plan_and_preprocess_entry_point"
nnUNetv2_preprocess = "nnunetv2.experiment_planning.plan_and_preprocess_entrypoints:preprocess_entry_point"
nnUNetv2_train = "nnunetv2.run.run_training:run_training_entry"
nnUNetv2_find_best_configuration = "nnunetv2.evaluation.find_best_configuration:find_best_configuration_entry_point"

[tool.setuptools]
packages = ["nnunetv2"]
